--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,6 +13,10 @@
 
   <div class="balance-card">
 
+    <p>CURRENT LOAN BALANCE</p>
+    <h1><sup>#</sup>1,282.99</h1>
+    <span>TOTAL ACCUMULATED PENALTY <strong> <sup>#</sup> 1,282.99</strong></span>
+
   </div>
 
   <div class="action-btns">
